Fixed existing documents to work with build system

--- a/2019_20/CAP/notes/notes.tex
+++ b/2019_20/CAP/notes/notes.tex
@@ -11,84 +11,84 @@
 \section{Functions and models}
 \subsection{Four ways to represent a function}
 \begin{definition}
-    A \B{function} $f$ is a rule that assigns to each element $x$ in a set $D$ exactly one element, called $f(x)$, in a set $E$.\\
-    $D$ is called the \B{domain}.\\
-    The set of all possible values of $f(x)$ as $x$ varies throughout the domain is called the \B{range}.\\
+    A \textbf{function} $f$ is a rule that assigns to each element $x$ in a set $D$ exactly one element, called $f(x)$, in a set $E$.\\
+    $D$ is called the \textbf{domain}.\\
+    The set of all possible values of $f(x)$ as $x$ varies throughout the domain is called the \textbf{range}.\\
 \end{definition}
 \begin{definition}
-    A function $f$ that satisfies $f(-x)=f(x)$ for all $x$ in its domain is called an \B{even function}.
+    A function $f$ that satisfies $f(-x)=f(x)$ for all $x$ in its domain is called an \textbf{even function}.
 \end{definition}
 \begin{definition}
-    A function $f$ that satisfies $f(-x)=-f(x)$ for all $x$ in its domain is called an \B{odd function}.
+    A function $f$ that satisfies $f(-x)=-f(x)$ for all $x$ in its domain is called an \textbf{odd function}.
 \end{definition}
 \begin{definition}
-    A function $f$ is called \B{increasing} on an interval $I$ if
+    A function $f$ is called \textbf{increasing} on an interval $I$ if
     \begin{align*}
         \forall x_1, x_2 \in I.\:x_1 < x_2 \Rightarrow f(x_1) < f(x_2).
     \end{align*}
-    It is called \B{decreasing} on $I$ if
+    It is called \textbf{decreasing} on $I$ if
     \begin{align*}
         \forall x_1, x_2 \in I.\: x_1 < x_2 \Rightarrow f(x_1) > f(x_2).
     \end{align*}
 \end{definition}
 \subsection{Mathematical models: Essential functions}
 \begin{definition}
-    A \B{linear function} is a function $f$ of the form
+    A \textbf{linear function} is a function $f$ of the form
     \begin{align*}
         f(x) = mx + b
     \end{align*}
     where $m, b\in\R$.
 \end{definition}
 \begin{definition}
-    A function $P$ is called a \B{polynomial} if
+    A function $P$ is called a \textbf{polynomial} if
     \begin{align*}
         P(x) = a_nx^n+a_{n-1}x^{n-1}+\cdots +a_2x^2 + a_1x+a_0
     \end{align*}
-    where $n\in\N$ is the \B{degree} and the $a_0, a_1, ..., a_n$ are constants called the \B{coefficients}.
+    where $n\in\N$ is the \textbf{degree} and the $a_0, a_1, ..., a_n$ are constants called the \textbf{coefficients}.
 \end{definition}
 \begin{definition}
-    A function $f$ is called \B{rational function} if
+    A function $f$ is called \textbf{rational function} if
     \begin{align*}
         f(x) = \frac{P(x)}{Q(x)}
     \end{align*}
     where $P$ and $Q$ are polynomials.
 \end{definition}
 \begin{definition}
-    A function $f$ is called an \B{algebraic function} if it can be constructed using algebraic operations starting with polynomials.
+    A function $f$ is called an \textbf{algebraic function} if it can be constructed using algebraic operations starting with polynomials.
 \end{definition}
 \begin{definition}
-    A function $f$ is called an \B{exponential function} if it has the form
+    A function $f$ is called an \textbf{exponential function} if it has the form
     \begin{align*}
         f(x) = a^x
     \end{align*}
 \end{definition}
 \begin{definition}
-    The \B{logarithmic functions} $f(x) = \log_ax$ where the base $a$ is a positive constant, are the inverse functions of the exponential functions.
+    The \textbf{logarithmic functions} $f(x) = \log_ax$ where the base $a$ is a positive constant, are the inverse functions of the exponential functions.
 \end{definition}
 \subsection{New functions from old functions}
 \begin{definition}
-    Shifting the graph of a function in a certain direction is called \B{translation}.
+    Shifting the graph of a function in a certain direction is called \textbf{translation}.
     \begin{itemize}
         \item $y = f(x) + c$ shifts the graph a distance $c$ upward.
         \item $y= f(x - c)$ shifts the graph a distance $c$ to the right.
     \end{itemize}
 \end{definition}
 \begin{definition}
-    The graph of a function can be \B{stretched}. 
+    The graph of a function can be \textbf{stretched}. 
     \begin{itemize}
         \item $y=cf(x)$ stretches the graph vertically by a factor of $c$.
         \item $y=f(x/c)$ stretches the graph horizontally by a factor of $c$.
     \end{itemize}
 \end{definition}
 \begin{definition}
-    The graph of a function can be \B{reflected}.
+    The graph of a function can be \textbf{reflected}.
     \begin{itemize}
         \item $y=-f(x)$ reflects the graph about the $x$-axis.
         \item $y=f(-x)$ reflects the graph about the $y$-axis.
     \end{itemize}
 \end{definition}
 \begin{definition}
-    Functions may be \B{combined}.
+    Functions may be \textbf{combined}.
     \begin{align*}
         (f+g)(x) &:= f(x) + g(x)\\
         (f-g)(x) &:= f(x) - g(x)\\
@@ -110,13 +110,13 @@
 \end{theorem}
 \subsection{Inverse functions and logarithms}
 \begin{definition}
-    A function $f$ with the domain $D$ is called a \B{one-to-one function} if it never takes on the same value twice; that is
+    A function $f$ with the domain $D$ is called a \textbf{one-to-one function} if it never takes on the same value twice; that is
     \begin{align*}
         \forall x_1, x_2 \in D.\: x_1\not=x_2 \Rightarrow f(x_1)\not= f(x_2)
     \end{align*}
 \end{definition}
 \begin{definition}
-    Let $f$ be a one-to-one function with domain $A$ and range $B$. Then its \B{inverse function} $f^{-1}$ has domain $B$ and range $A$ and is defined by
+    Let $f$ be a one-to-one function with domain $A$ and range $B$. Then its \textbf{inverse function} $f^{-1}$ has domain $B$ and range $A$ and is defined by
     \begin{align*}
         f^{-1}(y) = x \Leftrightarrow f(x) = y
     \end{align*}
@@ -133,7 +133,7 @@
     \end{enumerate}
 \end{theorem}
 \begin{definition}
-    The \B{natural logarithm} $\ln x$ is defined as
+    The \textbf{natural logarithm} $\ln x$ is defined as
     \begin{align*}
         \ln x := \log_e x
     \end{align*}
@@ -159,7 +159,7 @@
     \begin{align*}
         \lim_{x\to a^-}f(x) = L
     \end{align*}
-    and say the \B{left-hand limit of $f(x)$ as x approachse $a$} is equal to $L$ if we can make the values of $f(x)$ arbitrarily close to $L$ by taking $x$ to be sufficiently close to $a$ and $x$ less than $a$. 
+    and say the \textbf{left-hand limit of $f(x)$ as x approachse $a$} is equal to $L$ if we can make the values of $f(x)$ arbitrarily close to $L$ by taking $x$ to be sufficiently close to $a$ and $x$ less than $a$. 
 \end{definition}
 \begin{theorem}
     \begin{align*}
@@ -181,7 +181,7 @@
     means that the values of $f(x)$ can be made arbitrarily large negative by taking $x$ sufficiently close to $a$, but not equal to $a$.
 \end{definition}
 \begin{definition}
-    The line $x=a$ is called a \B{vertical asymptote} of the curve $y=f(x)$ if at least one of the following statements is true:
+    The line $x=a$ is called a \textbf{vertical asymptote} of the curve $y=f(x)$ if at least one of the following statements is true:
     \begin{align*}
         \lim_{x\to a}f(x) = \infty\\
         \lim_{x\to a^-}f(x) = \infty\\
@@ -233,7 +233,7 @@
     \end{align*}
 \end{theorem}
 \begin{theorem}
-    \B{The squeeze theorem.}\\
+    \textbf{The squeeze theorem.}\\
     If $f(x)\leq g(x)\leq h(x)$ when $x$ is near $a$ (except possibly at $a$) and
     \begin{align*}
         \lim_{x\to a}f(x) = \lim_{x\to a}h(x) = L
@@ -245,7 +245,7 @@
 \end{theorem}
 \subsection{The precise definition of a limit}
 \begin{definition}
-    Let $f$ be a function defined on some open interval that contains the number $a$, except possibly at $a$ itself. Then we say that the \B{limit of $f(x)$ as $x$ approaches $a$ is $L$}, and we write
+    Let $f$ be a function defined on some open interval that contains the number $a$, except possibly at $a$ itself. Then we say that the \textbf{limit of $f(x)$ as $x$ approaches $a$ is $L$}, and we write
     \begin{align*}
         \lim_{x\to a}f(x) = L
     \end{align*}
@@ -292,23 +292,23 @@
 \end{definition}
 \subsection{Continuity}
 \begin{definition}
-    A function $f$ is \B{continuous at a number $a$} if
+    A function $f$ is \textbf{continuous at a number $a$} if
     \begin{align*}
         \lim_{x\to a}f(x)=f(a).
     \end{align*}
 \end{definition}
 \begin{definition}
-    A function $f$ is \B{continuous from the right at a number $a$} if
+    A function $f$ is \textbf{continuous from the right at a number $a$} if
     \begin{align*}
         \lim_{x\to a^+}f(x) = f(a)
     \end{align*}
-    and $f$ is \B{continuous from the left at $a$} if
+    and $f$ is \textbf{continuous from the left at $a$} if
     \begin{align*}
         \lim_{x\to a^-}f(x) = f(a).
     \end{align*}
 \end{definition}
 \begin{definition}
-    A function $f$ is \B{continuous on an interval $I$} if 
+    A function $f$ is \textbf{continuous on an interval $I$} if 
     \begin{align*}
         \forall a \in I, \lim_{x\to a}f(x) = f(a).
     \end{align*}
@@ -351,7 +351,7 @@
     If $g$ is continuous at $a$ and $f$ is continuous at $g(a)$, then the composite function $f\circ g$ is continuous at $a$.
 \end{theorem}
 \begin{theorem}
-    \B{The intermediate value theorem}\\
+    \textbf{The intermediate value theorem}\\
     Suppose that $f$ is continuous on the closed interval $[a,b]$ and let $N$ be any number between $f(a)$ and $f(b)$, where $f(a)\not=f(b)$. Then there exists a number $c$ in $(a,b)$ such that $f(c)=N$.
 \end{theorem}
 \subsection{Limits at infinity; horizontal asymptotes}
@@ -370,7 +370,7 @@
     means that the values of $f(x)$ can be made arbitrarily close to $L$ by taking $x$ sufficiently large negative.
 \end{definition}
 \begin{definition}
-    The line $y=L$ is called a \B{horizontal asymptote} of the curve $y=f(x)$ if either
+    The line $y=L$ is called a \textbf{horizontal asymptote} of the curve $y=f(x)$ if either
     \begin{align*}
         \lim_{x\to \infty}f(x)=L \text{ or } \lim_{x\to-\infty}f(x)=L
     \end{align*}
@@ -428,7 +428,7 @@
 \end{definition}
 \subsection{Derivatives and rates of change}
 \begin{definition}
-    The \B{tangent line} to the curve $y=f(x)$ at the point $P(a, f(a))$ is the line through $P$ with slope
+    The \textbf{tangent line} to the curve $y=f(x)$ at the point $P(a, f(a))$ is the line through $P$ with slope
     \begin{align*}
         m=\lim_{x\to a}\frac{f(x)-f(a)}{x-a}
     \end{align*}
@@ -445,7 +445,7 @@
     \end{align*}
 \end{theorem}
 \begin{definition}
-    The \B{derivative of a function $f$ at a number $a$}, denoted $f'(a)$, is
+    The \textbf{derivative of a function $f$ at a number $a$}, denoted $f'(a)$, is
     \begin{align*}
         f'(a)=\lim_{h\to 0}\frac{f(a+h)-f(a)}{h}
     \end{align*}
@@ -457,13 +457,13 @@
     \end{align*}
 \end{theorem}
 \begin{definition}
-    The \B{derivative of $f$}, $f'$, is defined by
+    The \textbf{derivative of $f$}, $f'$, is defined by
     \begin{align*}
         f'(x)=\lim_{h\to 0}\frac{f(x+h)-f(x)}{h}
     \end{align*}
 \end{definition}
 \begin{definition}
-    A function $f$ is \B{differentiable at $a$} if $f'(a)$ exists. It is \B{differentiable on an open interval $(a,b)$} if it is differentiable at every number in the interval.
+    A function $f$ is \textbf{differentiable at $a$} if $f'(a)$ exists. It is \textbf{differentiable on an open interval $(a,b)$} if it is differentiable at every number in the interval.
 \end{definition}
 \begin{theorem}
     If $f$ is differentiable at $a$, then $f$ is continuous at $a$.
@@ -556,7 +556,7 @@
 \end{theorem}
 \subsection{Implicit differentiation}
 \begin{theorem}
-    \B{Derivatives of inverse trigonometric functions}\\
+    \textbf{Derivatives of inverse trigonometric functions}\\
     \begin{align*}
         \frac{d}{dx}(\sin^{-1}x)&=\frac{1}{\sqrt{1-x^2}}\\
         \frac{d}{dx}(\cos^{-1}x)&=-\frac{1}{\sqrt{1-x^2}}\\
@@ -575,7 +575,7 @@
     \begin{align*}
         f(x)\approx f(a)+f'(a)(x-a)
     \end{align*}
-    is called the \B{linear approximation} or \B{tangent line approximation} of $f$ at $a$.
+    is called the \textbf{linear approximation} or \textbf{tangent line approximation} of $f$ at $a$.
 \end{theorem}
 \subsection{Hyperbolic functions}
 \begin{definition}
@@ -586,7 +586,7 @@
     \end{align*}
 \end{definition}
 \begin{theorem}
-    \B{Hyperbolic identities}
+    \textbf{Hyperbolic identities}
     \begin{align*}
         \sinh(-x) &= -\sinh x\\
         \cosh(-x) &= \cosh x\\
@@ -597,7 +597,7 @@
     \end{align*}
 \end{theorem}
 \begin{theorem}
-    \B{Derivatives of hyperbolic functions and their inverses}
+    \textbf{Derivatives of hyperbolic functions and their inverses}
     \begin{align*}
         \begin{aligned}
             \frac{d}{dx}(\sinh x)&=\cosh x\\
@@ -621,39 +621,39 @@
 \section{Applications of Differentiation}
 \subsection{Maximum and minimum values}
 \begin{definition}
-    A function $f$ has an \B{absolute maximum} (or \B{global maximum}) at $c$ if
+    A function $f$ has an \textbf{absolute maximum} (or \textbf{global maximum}) at $c$ if
     \begin{align*}
         \forall x\in \dom f, f(x)\geq f(x).
     \end{align*} 
-    Similarly, $f$ has an \B{absolute minimum} at $c$ if
+    Similarly, $f$ has an \textbf{absolute minimum} at $c$ if
     \begin{align*}
         \forall x\in \dom f, f(x)\leq f(x).
     \end{align*}
 \end{definition}
 \begin{definition}
-    A function $f$ has a \B{local maximum} at $c$ if
+    A function $f$ has a \textbf{local maximum} at $c$ if
     \begin{align*}
         \exists a,b\in \dom f \st \forall x\in (a,b), f(c)\geq f(x). 
     \end{align*}
-    Similarly, $f$ has a \B{local minimum} at $c$ if
+    Similarly, $f$ has a \textbf{local minimum} at $c$ if
     \begin{align*}
         \exists a,b\in \dom f\st \forall x\in(a,b), f(c)\geq f(x).
     \end{align*}
 \end{definition}
 \begin{theorem}
-    \B{The extreme value theorem}\\
+    \textbf{The extreme value theorem}\\
     If $f$ is continuous on a close interval $[a,b]$, then $f$ attains an absolute maximum value $f(c)$ and an absolute minimum value $f(d)$ at some numbers $c,d\in[a,b]$.
 \end{theorem}
 \begin{theorem}
-    \B{Fermat's theorem}\\
+    \textbf{Fermat's theorem}\\
     If $f$ has a local maximum or minimum at $c$, and if $f'(c)$ exists, then $f'(c)=0$.
 \end{theorem}
 \begin{definition}
-    A \B{critical number} of a function $f$ is a number $c$ in the domain of $f$ such that either $f'(c)=0$ or $f'(c)$ does not exists.
+    A \textbf{critical number} of a function $f$ is a number $c$ in the domain of $f$ such that either $f'(c)=0$ or $f'(c)$ does not exists.
 \end{definition}
 \subsection{The mean value theorem}
 \begin{theorem}
-    \B{Rolle's theorem}\\
+    \textbf{Rolle's theorem}\\
     Let $f$ be a function that satisfies the following three hypotheses:
     \begin{enumerate}
         \item $f$ is continuous on the closed interval $[a,b]$.
@@ -663,7 +663,7 @@
     Then there is a number $c \in (a,b)$ such that $f'(c)=0$.
 \end{theorem}
 \begin{theorem}
-    \B{The mean value theorem}\\
+    \textbf{The mean value theorem}\\
     Let $f$ be a function that satisfies the following hypotheses:
     \begin{enumerate}
         \item $f$ is continuous on the closed interval $[a,b]$.
@@ -689,17 +689,17 @@
 \end{theorem}
 \subsection{How derivatives affect the shape of a graph}
 \begin{definition}
-    If the graph of $f$ lies above all of its tangents on an interval $I$, then it is called \B{concave upward} on $I$. If the graph of $f$ lies below all of its tangents, then it is called \B{concave downward} on $I$.
+    If the graph of $f$ lies above all of its tangents on an interval $I$, then it is called \textbf{concave upward} on $I$. If the graph of $f$ lies below all of its tangents, then it is called \textbf{concave downward} on $I$.
 \end{definition}
 \begin{theorem}
-    \B{Concavity test}
+    \textbf{Concavity test}
     \begin{enumerate}
         \item If $\forall x\in I, f''(x)>0$, then the graph of $f$ is concave upward on $I$.
         \item If $\forall x\in I, f''(x)<0$, then the graph of $f$ is concave downward on $I$.
     \end{enumerate}
 \end{theorem}
 \begin{definition}
-    A point $P$ on a curve $y=f(x)$ is called an \B{inflection point} if $f$ is continuous there and the curve changes its concavity.
+    A point $P$ on a curve $y=f(x)$ is called an \textbf{inflection point} if $f$ is continuous there and the curve changes its concavity.
 \end{definition}
 \begin{theorem}
     Suppose $f''$ is continuous near $c$.
@@ -710,7 +710,7 @@
 \end{theorem}
 \subsection{Indeterminate forms and l'Hospital's rule}
 \begin{theorem}
-    \B{L'Hosptial's rule}\\
+    \textbf{L'Hosptial's rule}\\
     Suppose $f$ and $g$ are differentiable and $g'(x)\not=0$ on an open interval $I$ that contains $a$ (except possibly at $a$). Suppose that
     \begin{align*}
         \lim_{x\to a}f(x)=0\text{ and } \lim_{x\to a}g(x)=0
@@ -728,7 +728,7 @@
 \setcounter{subsection}{6}
 \subsection{Antiderivatives}
 \begin{definition}
-    A function $F$ is called an \B{antiderivative} of $f$ on an interval $I$ if $F'(x)=f(x)$ for all $x$ in $I$.
+    A function $F$ is called an \textbf{antiderivative} of $f$ on an interval $I$ if $F'(x)=f(x)$ for all $x$ in $I$.
 \end{definition}
 \begin{theorem}
     If $F$ is an antiderivative of $f$ on an interval $I$, then the most general antiderivative of $f$ on $I$ is
@@ -758,18 +758,18 @@
 \section{Integrals}
 \subsection{Areas and Distances}
 \begin{definition}
-  The \B{area} $A$ of the region $S$ that lies under the graph of the continuous function $f$ is the limit of the sum of the areas of appoximating rectangles:
+  The \textbf{area} $A$ of the region $S$ that lies under the graph of the continuous function $f$ is the limit of the sum of the areas of appoximating rectangles:
   \begin{align*}
       A=\lim_{n\to\infty}R_n = \lim_{n\to \infty}\left(f(x_1)\Delta x + f(x_2)\Delta x + \cdots + f(x_n)\delta x\right)
   \end{align*}
 \end{definition}
 \subsection{The definite integral}
 \begin{definition}
-    If $f$ is a function defined on $[a,b]$, the \B{definite integral of $f$ from $a$ to $b$} is the number
+    If $f$ is a function defined on $[a,b]$, the \textbf{definite integral of $f$ from $a$ to $b$} is the number
     \begin{align*}
         \int_a^b f(x)dx=\lim_{\max \Delta x_i\to0}\sum_{i=1}^n f(x_i^*)\Delta x_i
     \end{align*}
-    provided that this limit exists. If it does exist, we say that $f$ is \B{integrable} on $[a,b]$.
+    provided that this limit exists. If it does exist, we say that $f$ is \textbf{integrable} on $[a,b]$.
 \end{definition}
 \begin{theorem}
     If $f$ is continuous on $[a,b]$, or if $f$ has only a finite number of jump discontinuities, then $f$ is integrable on $[a,b]$; that is, the definite integral $\int_a^b f(x)dx$ exists.
@@ -783,7 +783,7 @@
     \end{align*}
 \end{theorem}
 \begin{theorem}
-    \B{The midpoint rule}.
+    \textbf{The midpoint rule}.
     \begin{align*}
         \int_a^bf(x)dx \approx \sum_{i=1}^nf(\bar{x_i})\Delta x = \Delta x (f(\bar{x_i})+\cdots+f(\bar{x_n}))
     \end{align*}
@@ -794,7 +794,7 @@
     \end{align*}
 \end{theorem}
 \begin{theorem}
-    \B{Properties of integrals}.\\
+    \textbf{Properties of integrals}.\\
     Suppose all the following integrals exist and let $c$ be any constant.
     \begin{enumerate}
         \item $\int_a^b cdx = c(b-a)$
@@ -812,7 +812,7 @@
 \end{theorem}
 \subsection{Evaluating definite integrals}
 \begin{theorem}
-    \B{Net change theorem}. The integral of a rate of change is the net change:
+    \textbf{Net change theorem}. The integral of a rate of change is the net change:
     \begin{align*}
         \int_a^bF'(x)dx=F(b)-F(a)
     \end{align*}
@@ -826,13 +826,13 @@
    \end{enumerate}
 \end{theorem}
 \begin{definition}
-    The \B{average value of $f$} on the interval $[a,b]$ is
+    The \textbf{average value of $f$} on the interval $[a,b]$ is
     \begin{align*}
         f_{ave}=\frac{1}{b-a}\int_a^b f(x)dx.
     \end{align*}
 \end{definition}
 \begin{theorem}
-    \B{The mean value theorem for integrals.} If $f$ is continuous on $[a,b]$, then there exists a number $c$ in $[a,b]$ such that
+    \textbf{The mean value theorem for integrals.} If $f$ is continuous on $[a,b]$, then there exists a number $c$ in $[a,b]$ such that
     \begin{align*}
         f(c)=f_{ave}=\frac{1}{b-a}\int_a^b f(x)dx
     \end{align*}
@@ -843,21 +843,21 @@
 \end{theorem}
 \subsection{The substitution rule}
 \begin{theorem}
-    \B{The substitution rule.}
+    \textbf{The substitution rule.}
     If $u=g(x)$ is a differetiable function whose range is an interval $I$ and $f$ is continuous on $I$, then
     \begin{align*}
         \int f(g(x))g'(x)\:dx=\int f(u)\:du
     \end{align*}
 \end{theorem}
 \begin{theorem}
-    \B{The substitution rule for definite integrals.}
+    \textbf{The substitution rule for definite integrals.}
     If $g'$ is continuous on $[a,b]$ and $f$ is continuous on the range of $u=g(x)$, then 
     \begin{align*}
         \int_a^b f(g(x))g'(x)\:dx=\int_{g(a)}^{g(b)}f(u)\:du.
     \end{align*}
 \end{theorem}
 \begin{theorem}
-    \B{Integrals of symmetric functions.} Suppose $f$ is continuous on $[-a,a]$.
+    \textbf{Integrals of symmetric functions.} Suppose $f$ is continuous on $[-a,a]$.
     \begin{enumerate}
         \item If $f$ is even, then $\int_{-a}^a f(x)\:dx= 2\int_0^a f(x)\:dx$.
         \item If $f$ is odd, then $\int_{-a}^a f(x)\:dx = 0$.
@@ -870,7 +870,7 @@
     \end{align*}
 \end{theorem}
 \begin{definition}
-    \B{of an improper integral of type 1.}
+    \textbf{of an improper integral of type 1.}
     \begin{enumerate}
         \item If $\int_a^t f(x)\:dx$ exists for every number $t\geq a$, then
         \begin{align*}
@@ -883,14 +883,14 @@
         \end{align*}
         provided this limit exists (as a finite number).
     \end{enumerate}
-    The improper integrals $\int_a^\infty f(x)\:dx$ and $\int_{-\infty}^b f(x)\:dx$ are called \B{convergent} if the corresponding limit exists and \B{divergent} otherwise.\\
+    The improper integrals $\int_a^\infty f(x)\:dx$ and $\int_{-\infty}^b f(x)\:dx$ are called \textbf{convergent} if the corresponding limit exists and \textbf{divergent} otherwise.\\
     If both  $\int_a^\infty f(x)\:dx$ and $\int_{-\infty}^a f(x)\:dx$ are convergent, then we define
     \begin{align*}
         \int_{-\infty}^\infty f(x)\:dx = \int_a^\infty f(x)\:dx + \int_{-\infty}^a f(x)\:dx
     \end{align*}
 \end{definition}
 \begin{definition}
-    \B{of an improper integral of type 2.}
+    \textbf{of an improper integral of type 2.}
     \begin{enumerate}
         \item If $f$ is continuous on $[a,b)$ and discontinuous at $b$, then
         \begin{align*}
@@ -903,14 +903,14 @@
         \end{align*}
         if this limit exists.
     \end{enumerate}
-    The improer integral $\int_a^b f(x)\:dx$ is called \B{convergent} if the corresponding limit exists and \B{divergent} otherwise.\\
+    The improer integral $\int_a^b f(x)\:dx$ is called \textbf{convergent} if the corresponding limit exists and \textbf{divergent} otherwise.\\
     If $f$ has a discontinuity at $c$, where $a<c<b$, and both $\int_a^c f(x)\:dx$ and $\int_c^b f(x)\:dx$ are convergent, then we define
     \begin{align*}
         \int_a^b f(x)\: dx = \int_a^c f(x)\:dx + \int_c^b f(x)\:dx.
     \end{align*}
 \end{definition}
 \begin{theorem}
-    \B{The comparison theorem.} Suppose that $f$ and $g$ are continuous functions with $f(x)\geq g(x)\geq 0$ for $x\geq a$.
+    \textbf{The comparison theorem.} Suppose that $f$ and $g$ are continuous functions with $f(x)\geq g(x)\geq 0$ for $x\geq a$.
     \begin{enumerate}
         \item If $\int_a^\infty f(x)\:dx$ is convergent, then $\int_a^\infty g(x)\:dx$ is convergent.
         \item If $\int_a^\infty g(x)\:dx$ is divergent, then $\int_a^\infty f(x)\:dx$ is divergent.
@@ -924,19 +924,19 @@
     \end{align*}
 \end{definition}
 \begin{definition}
-    Let $S$ be a solid that lies between $x=a$ and $x=b$. If the cross-sectional area of $S$ in the plane $P_x$, through $x$ and perpendicular to the $x$-axis, is $A(x)$, where $A$ is an integrable function, then the \B{volume} of $S$ is
+    Let $S$ be a solid that lies between $x=a$ and $x=b$. If the cross-sectional area of $S$ in the plane $P_x$, through $x$ and perpendicular to the $x$-axis, is $A(x)$, where $A$ is an integrable function, then the \textbf{volume} of $S$ is
     \begin{align*}
         V=\int_a^b A(x)\:dx.
     \end{align*}
 \end{definition}
 \begin{theorem}
-    \B{The arc length formula.} If $f'$ is continuous on $[a,b]$, then the length of the curve $y=f(x)$, $a\leq x \leq b$, is
+    \textbf{The arc length formula.} If $f'$ is continuous on $[a,b]$, then the length of the curve $y=f(x)$, $a\leq x \leq b$, is
     \begin{align*}
         L = \int_a^b \sqrt{1+\left(\frac{df}{dx}\right)^2}\:dx.
     \end{align*}
 \end{theorem}
 \begin{theorem}
-    \B{of Pappus.} Let $R$ be a plane region that lies entirely on one side of a line $l$ in the plane. 
+    \textbf{of Pappus.} Let $R$ be a plane region that lies entirely on one side of a line $l$ in the plane. 
     If $R$ is rotated about $l$, then the volume of the resulting solid is the product of the area $A$ of $R$ and the distance $d$ traveled by the centroid of $R$.
 \end{theorem}
 \end{document}
