--- a/2019_20/PPS/homework-7/homework.tex
+++ b/2019_20/PPS/homework-7/homework.tex
@@ -1,5 +1,6 @@
 \documentclass{article}
 \usepackage{homework-preamble}
+\mkthms
 
 \title{PPS: Homework 7 (Workshop 33)}
 \author{Franz Miltz (UNN: S1971811)}
