--- a/2019_20/ILA/notes/notes.tex
+++ b/2019_20/ILA/notes/notes.tex
@@ -12,7 +12,7 @@
 \section{Vectors}
 \subsection{The Geometry and Algebra of Vectors}
 \begin{theorem}
-    \B{Algebraic Properties of Vectors in $\mathbb{R}^n$}\\
+    \textbf{Algebraic Properties of Vectors in $\mathbb{R}^n$}\\
     Let $\vec u$, $\vec v$, and $\vec w$ be vectors in $\mathbb{R}^n$ and let $c$ and $d$ be scalars. Then
     \begin{enumerate}
         \item $\vec u + \vec v = \vec v + \vec u$
@@ -26,7 +26,7 @@
     \end{enumerate}
 \end{theorem}
 \begin{definition}
-    A vector $\vec v$ is a \B{linear combination} of vectors $\vec v_1, \vec v_2, ...,\vec v_k$ if there are scalars $c_1, c_2, ..., c_k$ such that $\vec v = c_1 \vec v_1 + c_2 \vec v_2 + \cdots c_k\vec v_k$. The scalars $c_1, c_2, ..., c_k$ are called the \B{coefficients} of the linear combination.
+    A vector $\vec v$ is a \textbf{linear combination} of vectors $\vec v_1, \vec v_2, ...,\vec v_k$ if there are scalars $c_1, c_2, ..., c_k$ such that $\vec v = c_1 \vec v_1 + c_2 \vec v_2 + \cdots c_k\vec v_k$. The scalars $c_1, c_2, ..., c_k$ are called the \textbf{coefficients} of the linear combination.
 \end{definition}
 \subsection{Length and Angle: The Dot Product}
 \begin{definition}
@@ -39,7 +39,7 @@
             v_1\\v_2\\\vdots\\v_n
         \end{bmatrix}
     \end{gather*}
-    then the \B{dot product $\vec u \cdot \vec v$} of $\vec u$ and $\vec v$ is defined by
+    then the \textbf{dot product $\vec u \cdot \vec v$} of $\vec u$ and $\vec v$ is defined by
     \begin{gather*}
         \vec u \cdot \vec v = u_1v_1 + u_2v_2 + \cdots + u_nv_n
     \end{gather*} 
@@ -54,7 +54,7 @@
     \end{enumerate}
 \end{theorem}
 \begin{definition}
-    The \B{length} of a vector $\vec v$ in $\mathbb{R}^n$ is the nonnegative scalar $\Vert\vec v\Vert$ defined by
+    The \textbf{length} of a vector $\vec v$ in $\mathbb{R}^n$ is the nonnegative scalar $\Vert\vec v\Vert$ defined by
     \begin{gather*}
         \Vert\vec v\Vert = \sqrt{\vec v \cdot \vec v}
     \end{gather*}
@@ -67,21 +67,21 @@
     \end{enumerate}
 \end{theorem}
 \begin{theorem}
-    \B{The Cauchy-Schwarz Inequality}\\
+    \textbf{The Cauchy-Schwarz Inequality}\\
     For all vectors $\vec u$ and $\vec v$ in $\mathbb{R}^n$,
     \begin{gather*}
         |\vec u \cdot \vec v| \leq \Vert \vec u \Vert \Vert \vec v \Vert
     \end{gather*}
 \end{theorem}
 \begin{theorem}
-    \B{The Triangle Inequality}\\
+    \textbf{The Triangle Inequality}\\
     For all vecotrs $\vec u$ and $\vec v$ in $\mathbb{R}^n$,
     \begin{gather*}
         \Vert \vec u + \vec v \Vert \leq \Vert \vec u \Vert + \Vert \vec v \Vert
     \end{gather*}
 \end{theorem}
 \begin{definition}
-    The \B{distance} $d(\vec u, \vec v)$ between vectors $\vec u$ and $\vec v$ in $\mathbb{R}^n$ is defined by
+    The \textbf{distance} $d(\vec u, \vec v)$ between vectors $\vec u$ and $\vec v$ in $\mathbb{R}^n$ is defined by
     \begin{gather*}
         d(\vec u, \vec v) = \Vert \vec u = \vec v \Vert
     \end{gather*}
@@ -93,74 +93,74 @@
     \end{gather*}
 \end{definition}
 \begin{definition}
-    Two vectors $\vec u$ and $\vec v$ in $\mathbb{R}^n$ are \B{orthogonal} to each other if $\vec u \cdot \vec v = 0$.
+    Two vectors $\vec u$ and $\vec v$ in $\mathbb{R}^n$ are \textbf{orthogonal} to each other if $\vec u \cdot \vec v = 0$.
 \end{definition}
 \begin{theorem}
-    \B{Pythagoras' Theorem}\\
+    \textbf{Pythagoras' Theorem}\\
     For all vectors $\vec u$ and $\vec v$ in $\mathbb{R}^n$, $\Vert \vec u + \vec v\Vert^2 = \Vert \vec u \Vert^2 + \Vert \vec v \Vert ^2$ iff $\vec u$ and $\vec v$ are orthogonal.
 \end{theorem}
 \begin{definition}
-    If $\vec u$ and $\vec v$ are vectors in $\mathbb{R}^n$ and $\vec u \not= \vec 0$, then the \B{projection of $\vec v$ onto $\vec u$} is the vector $proj_{\vec u}(\vec v)$ defined by
+    If $\vec u$ and $\vec v$ are vectors in $\mathbb{R}^n$ and $\vec u \not= \vec 0$, then the \textbf{projection of $\vec v$ onto $\vec u$} is the vector $proj_{\vec u}(\vec v)$ defined by
     \begin{gather*}
         proj_{\vec u}(\vec v) = \left(\frac{\vec u \cdot \vec v}{\vec u \cdot \vec v}\right)\vec u
     \end{gather*}
 \end{definition}
 \subsection{Lines and Planes}
 \begin{definition}
-    The \B{normal form of the equation of a line $l$} in $\mathbb{R}^2$ is
+    The \textbf{normal form of the equation of a line $l$} in $\mathbb{R}^2$ is
     \begin{gather*}
         \vec n \cdot (\vec v - \vec p) = 0 \text{  or  } \vec n \cdot \vec x = \vec n \cdot \vec p
     \end{gather*}
     where $\vec p$ is a specific point on $l$ and $\vec n \not= 0$ is a normal vector for $l$.\\
-    The \B{general form of the equation of $l$} is $ax+by=c$, where $\vec n = \begin{bmatrix}
-        a\\b    
+    The \textbf{general form of the equation of $l$} is $ax+by=c$, where $\vec n = \begin{bmatrix}
+        a\\textbf    
     \end{bmatrix}$ is a normal vector for $l$.
 \end{definition}
 \begin{definition}
-    The \B{vector form of the equation of a line} in $\mathbb{R}^2$ or $\mathbb{R}^3$ is
+    The \textbf{vector form of the equation of a line} in $\mathbb{R}^2$ or $\mathbb{R}^3$ is
     \begin{gather*}
         \vec x = \vec p + t \vec d
     \end{gather*}
     where $\vec p$ is a specific point on $l$ and $d\not=\vec 0$ is a direction vector for $l$.\\
-    The equations corresponding to the components of the vectors form of the equation are called \B{parametric equations} of $l$.
+    The equations corresponding to the components of the vectors form of the equation are called \textbf{parametric equations} of $l$.
 \end{definition}
 \begin{definition}
-    The \B{normal from of the equation of a plane $\mathcal{P}$} in $\mathbb{R}^3$ is
+    The \textbf{normal from of the equation of a plane $\mathcal{P}$} in $\mathbb{R}^3$ is
     \begin{gather*}
         \vec n \cdot (\vec x - \vec p) = 0 \text{  or  } \vec n \cdot \vec x = \vec n \cdot \vec p
     \end{gather*}
     where $\vec p$ is a specific point on $\mathcal{P}$ and $\vec n \not= 0$ is a normal vector for $\mathcal{P}$.\\
-    The \B{general form of the equation of $\mathcal{P}$} is $ax + by + cz = d$, where $\vec n = \begin{bmatrix}
+    The \textbf{general form of the equation of $\mathcal{P}$} is $ax + by + cz = d$, where $\vec n = \begin{bmatrix}
         a \\ b \\ c
     \end{bmatrix}$ is a normal vector for $\mathcal{P}$.
 \end{definition}
 \begin{definition}
-    The \B{vector form of the equation of a plane $\mathcal{P}$} in $\mathbb{R}^3$ is
+    The \textbf{vector form of the equation of a plane $\mathcal{P}$} in $\mathbb{R}^3$ is
     \begin{gather*}
         \vec x = \vec p + s \vec u + t \vec v
     \end{gather*}
     where $\vec p$ is a point on $\mathcal{P}$ and $\vec u$ and $\vec v$ are direction vectors for $\mathcal{P}$ ($\vec u$ and $\vec v$ are non-zero and parallel to $\mathcal{P}$, but not parallel to each other).\\
-    The equations corresponding to the components of the vector form of the equation are called \B{parametric equations} of $\mathcal{P}$.
+    The equations corresponding to the components of the vector form of the equation are called \textbf{parametric equations} of $\mathcal{P}$.
 \end{definition}
 \section{Systems of Linear Equations}
 \subsection{Introduction to Systems of Linear Equations}
 \begin{definition}
-    A \B{linear equation} in the $n$ variables $x_1, x_2, ..., x_n$ is an equations that can be written in the form
+    A \textbf{linear equation} in the $n$ variables $x_1, x_2, ..., x_n$ is an equations that can be written in the form
     \begin{gather*}
         a_1x_1+a_2x_2+\cdots+a_nx_n=b
     \end{gather*}
-    where the \B{coefficients} $a_1, a_2, ..., a_n$ and the \B{constant term} $b$ are constants.
+    where the \textbf{coefficients} $a_1, a_2, ..., a_n$ and the \textbf{constant term} $b$ are constants.
 \end{definition}
 \subsection{Direct Methods for Solving Linear Systems}
 \begin{definition}
-    A matrix is in \B{row echelon form (REF)} if it satisfies the following properties:
+    A matrix is in \textbf{row echelon form (REF)} if it satisfies the following properties:
     \begin{enumerate}
         \item Any zero rows are at the bottom.
-        \item In each nonzero row, the first nonzero entry (the \B{leading entry}) is in a column to the left of any leading entries below it.
+        \item In each nonzero row, the first nonzero entry (the \textbf{leading entry}) is in a column to the left of any leading entries below it.
     \end{enumerate}
 \end{definition}
 \begin{definition}
-    The following \B{elementary row operations} can be performed on a matrix:
+    The following \textbf{elementary row operations} can be performed on a matrix:
     \begin{enumerate}
         \item Interchange two rows.
         \item Multiply a row by a nonzero constant.
@@ -168,23 +168,23 @@
     \end{enumerate}
 \end{definition}
 \begin{definition}
-    Matrices $A$ and $B$ are \B{row equivalent} if there is a sequence of elementary row operations that converts $A$ into $B$.
+    Matrices $A$ and $B$ are \textbf{row equivalent} if there is a sequence of elementary row operations that converts $A$ into $B$.
 \end{definition}
 \begin{theorem}
     Matrices $A$ and $B$ are row equivalent iff they can be reduced to the same REF.
 \end{theorem}
 \begin{definition}
-    The \B{rank} of a matrix is the number of nonzero rows in its row echelon form.
+    The \textbf{rank} of a matrix is the number of nonzero rows in its row echelon form.
 \end{definition}
 \begin{theorem}
-    \B{The Rank Theorem}\\
+    \textbf{The Rank Theorem}\\
     Let $A$ be the coefficient marix of a system of linear equations with $n$ variables. If the system is consistent, then
     \begin{gather*}
         \text{number of free variables}=n-\text{rank}(A)
     \end{gather*}
 \end{theorem}
 \begin{definition}
-    A matrix is in \B{reduced row echelon form (RREF)} if it satisfies the following properties:
+    A matrix is in \textbf{reduced row echelon form (RREF)} if it satisfies the following properties:
     \begin{enumerate}
         \item It is in REF. 
         \item The leading entry in each nonzero row is a 1.
@@ -192,7 +192,7 @@
     \end{enumerate}
 \end{definition}
 \begin{definition}
-    A system of linear equations is called \B{homogeneous} if the constant term in each equation is zero.
+    A system of linear equations is called \textbf{homogeneous} if the constant term in each equation is zero.
 \end{definition}
 \begin{theorem}
     If $[A\:|\:\vec 0]$ is a homogeneous system of $m$ linear equations with $n$ variables, where $m < n$, then the system has infinetly many solutions.
@@ -202,14 +202,14 @@
     A system of linear equations with augmented matrix $[A\:|\:\vec b]$ is consistent iff $\vec b$ is a linear combination of the columns of $A$.
 \end{theorem}
 \begin{definition}
-    If $S=\{\vec v_1, \vec v_2, ..., \vec v_k\}$ is a set of vectors in $\mathbb{R}^n$, then the set of all linear combinations of $\vec v_1, \vec v_2, ..., \vec v_k$ is called the \B{span} of $S$ and is denoted by $\text{span}(S)$. If $\text{span}(S)=\mathbb{R}^n$, then $S$ is called a \B{spanning set} for $\mathbb{R}^n$.
+    If $S=\{\vec v_1, \vec v_2, ..., \vec v_k\}$ is a set of vectors in $\mathbb{R}^n$, then the set of all linear combinations of $\vec v_1, \vec v_2, ..., \vec v_k$ is called the \textbf{span} of $S$ and is denoted by $\text{span}(S)$. If $\text{span}(S)=\mathbb{R}^n$, then $S$ is called a \textbf{spanning set} for $\mathbb{R}^n$.
 \end{definition}
 \begin{definition}
-    A set of vectors $\vec v_1, \vec v_2, ..., \vec v_k$ is \B{linearly dependent} if there are scalars $c_1, c_2, ..., c_k$, at least one of which is not zero, such that
+    A set of vectors $\vec v_1, \vec v_2, ..., \vec v_k$ is \textbf{linearly dependent} if there are scalars $c_1, c_2, ..., c_k$, at least one of which is not zero, such that
     \begin{gather*}
         c_1\vec v_1 + c_2\vec v_2 + \cdots + c_k\vec v_k = \vec 0
     \end{gather*}
-    A set of vectors that is not linearly dependent is called \B{linearly independent}.
+    A set of vectors that is not linearly dependent is called \textbf{linearly independent}.
 \end{definition}
 \begin{theorem}
     Vectors $\vec v_1, \vec v_2, ..., \vec v_m$ in $\mathbb{R}^n$ is linearly dependent iff at least one of the vectors can be expressed as a linear combination of the others.
@@ -233,10 +233,10 @@
 \section{Matrices}
 \subsection{Matrix Operations}
 \begin{definition}
-    A \B{matrix} is a rectangular array of numbers called the \B{entries}, or \B{elements}, of the matrix.
+    A \textbf{matrix} is a rectangular array of numbers called the \textbf{entries}, or \textbf{elements}, of the matrix.
 \end{definition}
 \begin{definition}
-    If $A$ is an $m\times n$ matrix and $B$ is an $n\times r$ matrix, then the \B{product} $C=AB$ is an $m\times r$ matrix. The $(i, j)$ entry of the product is computed as follows:
+    If $A$ is an $m\times n$ matrix and $B$ is an $n\times r$ matrix, then the \textbf{product} $C=AB$ is an $m\times r$ matrix. The $(i, j)$ entry of the product is computed as follows:
     \begin{gather*}
         c_{ij} = a_{i1}b_{1j}+a_{i2}b_{2j}+\cdots+a_{in}b_{nj}
     \end{gather*}
@@ -249,14 +249,14 @@
     \end{enumerate}
 \end{theorem}
 \begin{definition}
-    The \B{transpose} of an $m\times n$ matrix $A$ is the $n\times m$ matrix $A^\intercal$ obtained by interchanging the rows and columns of $A$. That is, the $i$th column of $A^\intercal$ is the $i$th row of $A$ for all $i$.
+    The \textbf{transpose} of an $m\times n$ matrix $A$ is the $n\times m$ matrix $A^\intercal$ obtained by interchanging the rows and columns of $A$. That is, the $i$th column of $A^\intercal$ is the $i$th row of $A$ for all $i$.
 \end{definition}
 \begin{definition}
-    A square matrix $A$ is \B{symmetric} if $A^\intercal = A$.
+    A square matrix $A$ is \textbf{symmetric} if $A^\intercal = A$.
 \end{definition}
 \subsection{Matrix Algebra}
 \begin{theorem}
-    \B{Algebraic Properties of Matrix Addition and Scalar Multiplication}\\
+    \textbf{Algebraic Properties of Matrix Addition and Scalar Multiplication}\\
     Let $A$, $B$ and $C$ be matrices of the same size and let $c$ and $d$ be scalars. Then
     \begin{enumerate}
         \item $A+B=B+A$
@@ -270,7 +270,7 @@
     \end{enumerate}
 \end{theorem}
 \begin{theorem}
-    \B{Properties of Matrix Multiplication}\\
+    \textbf{Properties of Matrix Multiplication}\\
     Let $A$, $B$ and $C$ be matrices and let $k$ be a scalar. Then
     \begin{enumerate}
         \item $A(BC) = (AB)C$
@@ -281,7 +281,7 @@
     \end{enumerate}
 \end{theorem}
 \begin{theorem}
-    \B{Properties of the Transpose}\\
+    \textbf{Properties of the Transpose}\\
     Let $A$ and $B$ be matrices and let $k$ be a scalar. Then
     \begin{enumerate}
         \item $(A^\intercal)^\intercal = A$
@@ -299,11 +299,11 @@
 \end{theorem}
 \subsection{The Inverse of a Matrix}
 \begin{definition}
-    If $A$ is an $n\times n$ matrix, an \B{inverse} of $A$ is an $n\times n$ matrix $A'$ with the property that
+    If $A$ is an $n\times n$ matrix, an \textbf{inverse} of $A$ is an $n\times n$ matrix $A'$ with the property that
     \begin{gather*}
         AA'=I\text{  and  } A'A = I 
     \end{gather*}
-    where $I = I_n$ is the $n\times n$ identity matrix. If such an $A'$ exists, then $A$ is called \B{invertible}.
+    where $I = I_n$ is the $n\times n$ identity matrix. If such an $A'$ exists, then $A$ is called \textbf{invertible}.
 \end{definition}
 \begin{theorem}
     If $A$ is an invertible matrix, then its inverse is unique.
@@ -341,7 +341,7 @@
     \end{gather*}
 \end{definition}
 \begin{definition}
-    An \B{elementary matrix} is any matrix that can be obtained by performing an elementary row operation on an identity matrix. 
+    An \textbf{elementary matrix} is any matrix that can be obtained by performing an elementary row operation on an identity matrix. 
 \end{definition}
 \begin{theorem}
     Let $E$ be the elementary matrix obtained by performing an elementary row operation on $I_n$. If the same elementary row operation is performed on a $n\times r$ matrix $A$ the result is the same as the matrix $EA$.
@@ -350,7 +350,7 @@
     Each elementary matrix is invertible, and its inverse is an elementary matrix of the same type.
 \end{theorem}
 \begin{theorem}
-    \B{The Fundamental Theorem of Invertible Matrices: V1}\\
+    \textbf{The Fundamental Theorem of Invertible Matrices: V1}\\
     Let $A$ be an $n\times n$ matrix. The following statements are equivalent:
     \begin{enumerate}
         \item $A$ is invertible.
@@ -380,14 +380,14 @@
     If $P$ is a permutation matrix, then $P^{-1}=P^\intercal$.
 \end{theorem}
 \begin{definition}
-    Let $A$ be a square matrix. A factorisation of $A$ as $A=P^\intercal LU$, where $P$ is a permutation matrix, $L$ is unit lower triangular, and $U$ is upper triangular, is called a \B{$\mathbf{P^\intercal LU}$ factorisation} of $A$.
+    Let $A$ be a square matrix. A factorisation of $A$ as $A=P^\intercal LU$, where $P$ is a permutation matrix, $L$ is unit lower triangular, and $U$ is upper triangular, is called a \textbf{$\mathbf{P^\intercal LU}$ factorisation} of $A$.
 \end{definition}
 \begin{theorem}
     Every square matrix has a $P^\intercal LU$ factorisation.
 \end{theorem}
 \subsection{Subspaces, Basis, Dimension, and Rank}
 \begin{definition}
-    A \B{subspace} of $\mathbb{R}^n$ is any collection $S$ of vectors in $\mathbb{R}^n$ such that:
+    A \textbf{subspace} of $\mathbb{R}^n$ is any collection $S$ of vectors in $\mathbb{R}^n$ such that:
     \begin{enumerate}
         \item The zero vector $\vec 0$ is in $S$.
         \item If $\vec u$ and $\vec v$ are in $S$, then $\vec u + \vec v$ is in $S$.
@@ -400,8 +400,8 @@
 \begin{definition}
     Let $A$ be an $m\times n$ matrix.
     \begin{enumerate}
-        \item The \B{row space} of $A$ is the subspace $\text{row}(A)$ of $\mathbb{R}^n$ spanned by the rows of $A$.
-        \item The \B{column space} of $A$ is the subspace $\text{col}(A)$ of $\mathbb{R}^m$ spanned by the column of $A$.
+        \item The \textbf{row space} of $A$ is the subspace $\text{row}(A)$ of $\mathbb{R}^n$ spanned by the rows of $A$.
+        \item The \textbf{column space} of $A$ is the subspace $\text{col}(A)$ of $\mathbb{R}^m$ spanned by the column of $A$.
     \end{enumerate}
 \end{definition}
 \begin{theorem}
@@ -411,7 +411,7 @@
     Let $A$ be an $m\times n$ matrix and let $N$ be the set of solutions of the homogeneous linear system $A\vec x=\vec 0$. Then $N$ is a subspace of $\mathbb{R}^n$.
 \end{theorem}
 \begin{definition}
-    Let $A$ be an $m\times n$ matrix. The \B{null space} of $A$ is the subspace of $\mathbb{R}^n$ consisting of solutions of the homogeneous linear system $A\vec x = \vec 0$. It is denoted by $\text{null}(A)$.
+    Let $A$ be an $m\times n$ matrix. The \textbf{null space} of $A$ is the subspace of $\mathbb{R}^n$ consisting of solutions of the homogeneous linear system $A\vec x = \vec 0$. It is denoted by $\text{null}(A)$.
 \end{definition}
 \begin{theorem}
     Let $A$ be a matrix whose entries are real numbers. For any system of linear equations $A\vec x =\vec b$, exactly one of the following is true:
@@ -422,18 +422,18 @@
     \end{enumerate}
 \end{theorem}
 \begin{definition}
-    A \B{basis} for a subspace $S$ of $\mathbb{R}^n$ is a sset of vectors in $S$ that
+    A \textbf{basis} for a subspace $S$ of $\mathbb{R}^n$ is a sset of vectors in $S$ that
     \begin{enumerate}
         \item spans $S$ and
         \item is linearly indepnedent.
     \end{enumerate}
 \end{definition}
 \begin{theorem}
-    \B{The Basis Theorem}\\
+    \textbf{The Basis Theorem}\\
     Let $S$ be a subspace of $\mathbb{R}^n$. Then any two bases for $S$ have the same number of vectors.
 \end{theorem}
 \begin{definition}
-    If $S$ is a subspace of $\mathbb{R}^n$, then the number of vectors in a basis for $S$ is called the \B{dimension} of $S$, denoted $\dim S$.
+    If $S$ is a subspace of $\mathbb{R}^n$, then the number of vectors in a basis for $S$ is called the \textbf{dimension} of $S$, denoted $\dim S$.
 \end{definition}
 \begin{theorem}
     Let $A$ be a matrix. Then
@@ -442,7 +442,7 @@
     \end{gather*}
 \end{theorem}
 \begin{definition}
-    The \B{rank} of a matrix $A$ is the dimension of its row and column spaces and is denoted by $\text{rank}(A)$.
+    The \textbf{rank} of a matrix $A$ is the dimension of its row and column spaces and is denoted by $\text{rank}(A)$.
 \end{definition}
 \begin{theorem}
     For any matrix $A$,
@@ -451,17 +451,17 @@
     \end{gather*}
 \end{theorem}
 \begin{definition}
-    The \B{nullity} of a matrix $A$ is the dimension of the null space and is denoted by $\text{nullity}(A)$.
+    The \textbf{nullity} of a matrix $A$ is the dimension of the null space and is denoted by $\text{nullity}(A)$.
 \end{definition}
 \begin{theorem}
-    \B{The Rank Theorem}\\
+    \textbf{The Rank Theorem}\\
     If $A$ is an $m\times n$ matrix, then
     \begin{gather*}
         \text{rank}(A) + \text{nullity}(A) = n
     \end{gather*}
 \end{theorem}
 \begin{theorem}
-    \B{The Fundamental Theorem of Invertible Matrices: V2}\\
+    \textbf{The Fundamental Theorem of Invertible Matrices: V2}\\
     Let $A$ be an $n\times n$ matrix. The following statements are equivalent:
     \begin{enumerate}
         \item $A$ is invertible.
@@ -493,22 +493,22 @@
     \end{gather*}
 \end{theorem}
 \begin{definition}
-    Let $S$ be a subspace of $\mathbb{R}^n$ and let $\mathcal{B}=\{\vec v_1, \vec v_2, ..., \vec v_k\}$ be a basis for $S$. Let $\vec v$ be a vector in $S$, and write $\vec v = c_1\vec v_1 + c_2\vec v_2 + \cdots + c_k\vec v_k$. Then $c_1, c_2, ..., c_k$ are called the \B{coordiantes of $v$ with respect to $\mathcal{B}$}, and the column vector
+    Let $S$ be a subspace of $\mathbb{R}^n$ and let $\mathcal{B}=\{\vec v_1, \vec v_2, ..., \vec v_k\}$ be a basis for $S$. Let $\vec v$ be a vector in $S$, and write $\vec v = c_1\vec v_1 + c_2\vec v_2 + \cdots + c_k\vec v_k$. Then $c_1, c_2, ..., c_k$ are called the \textbf{coordiantes of $v$ with respect to $\mathcal{B}$}, and the column vector
     \begin{gather*}
         [\vec v]_\mathcal{B} = \begin{bmatrix}
             c_1\\c_2\\\vdots\\c_k
         \end{bmatrix}
     \end{gather*}
-    is called the \B{coordinate vector of $\vec v$ with respect to $\mathcal{B}$}.
+    is called the \textbf{coordinate vector of $\vec v$ with respect to $\mathcal{B}$}.
 \end{definition}
 \setcounter{subsection}{5}
 \subsection{Linear Transformations}
 \begin{definition}
-    A \B{transformation} $T$ from $\mathbb{R}^n$ (\B{domain}) to $\mathbb{R}^m$ (\B{codomain}) is a rule which assigns to each vector $\vec v$ in $\mathbb{R}^n$ a unique vector $T(\vec v)$ (\B{image} of $\vec v$ under $T$) in $\mathbb{R}^m$. 
-    The \B{range} of $T$ is the set of all possible vectors $T(\vec v)$
+    A \textbf{transformation} $T$ from $\mathbb{R}^n$ (\textbf{domain}) to $\mathbb{R}^m$ (\textbf{codomain}) is a rule which assigns to each vector $\vec v$ in $\mathbb{R}^n$ a unique vector $T(\vec v)$ (\textbf{image} of $\vec v$ under $T$) in $\mathbb{R}^m$. 
+    The \textbf{range} of $T$ is the set of all possible vectors $T(\vec v)$
 \end{definition}
 \begin{definition}
-   $T:\mathbb{R}^n \to \mathbb{R}^m$ is a \B{linear transformation} iff
+   $T:\mathbb{R}^n \to \mathbb{R}^m$ is a \textbf{linear transformation} iff
     \begin{align*}        
         \forall \vec v_1, \vec v_2 \in \mathbb{R}^n.\:\forall c_1, c_2 \in \mathbb{R}.\: T(c_1\vec v_1 + c_2\vec v_2) = c_1T(\vec v_1) + c_2T(\vec v_2)
     \end{align*}
@@ -517,7 +517,7 @@
     All matrix transformations $T_A:\mathbb{R}^n\to\mathbb{R}^m$ are linear transformations.
 \end{theorem}
 \begin{theorem}
-    Let $T:\mathbb{R}^n\to\mathbb{R}^m$ be a linear transformation. Then $T=T_A$ where $A$ (\B{the standard matrix} of $T$) is the $m\times n$ matrix 
+    Let $T:\mathbb{R}^n\to\mathbb{R}^m$ be a linear transformation. Then $T=T_A$ where $A$ (\textbf{the standard matrix} of $T$) is the $m\times n$ matrix 
     \begin{align*}
         A = \begin{bmatrix}
             T(\vec e_1) & T(\vec e_2) & \cdots & T(\vec e_n)
@@ -540,7 +540,7 @@
 \end{theorem}
 \begin{definition}
     Let $S$ and $T$ be linear transformations from $\mathbb{R}^n$ to $\mathbb{R}^n$.\\ 
-    Then $S$ and $T$ are \B{inverse transformations} if $S\circ T= I_n$ and $T\circ S=I_n$.
+    Then $S$ and $T$ are \textbf{inverse transformations} if $S\circ T= I_n$ and $T\circ S=I_n$.
 \end{definition}
 \begin{theorem}
     Let $T:\mathbb{R}^n\to\mathbb{R}^n$ be an invertible linear transformation. Then its standard matrix $[T]$ is an invertible matrix, and
@@ -550,7 +550,7 @@
 \end{theorem}
 \subsection{Applications}
 \begin{definition}
-    A consumption matrix $C$ is called \B{productive} if $I-C$ is invertible and $(I-C)^{-1}\geq O$.
+    A consumption matrix $C$ is called \textbf{productive} if $I-C$ is invertible and $(I-C)^{-1}\geq O$.
 \end{definition}
 \begin{theorem}
     Let $C$ be a consumption matrix. Then $C$ is productive iff there exists a production vector $\vec x \geq \vec 0$ such that $\vec x > C\vec x$.
@@ -562,7 +562,7 @@
     Let $C$ be a consumption matrix. If the sum of each column of $C$ is less than $1$, then $C$ is productive.
 \end{theorem}
 \begin{definition}
-    If $G$ is a graph with $n$ vertices, then its \B{adjacency matrix} is the $n\times n$ matrix $A$ defined by
+    If $G$ is a graph with $n$ vertices, then its \textbf{adjacency matrix} is the $n\times n$ matrix $A$ defined by
     \begin{gather*}
         a_{ij} = \begin{cases}
             1 &\text{if there is an edge between vertices $i$ and $j$}\\
@@ -571,7 +571,7 @@
     \end{gather*}
 \end{definition}
 \begin{definition}
-    If $G$ is a digraph with $n$ vertices, then its \B{adjacency matrix} is the $n\times n$ matrix $A$ defined by
+    If $G$ is a digraph with $n$ vertices, then its \textbf{adjacency matrix} is the $n\times n$ matrix $A$ defined by
     \begin{gather*}
         a_{ij} = \begin{cases}
             1 &\text{if there is an edge from vertices $i$ and $j$}\\
@@ -582,10 +582,10 @@
 \section{Eigenvectors and Eigenvalues}
 \subsection{Introduction}
 \begin{definition}
-    Let $A$ be an $n\times n$ matrix. A scalar $\lambda$ is called an \B{eigenvalue} of $A$ if there is a nonzero vector $\vec x$ such taht $A\vec x=\lambda\vec x$. Such a vector $\vec x$ is called an \B{eigenvector} of $A$ corresponding to $\lambda$.
+    Let $A$ be an $n\times n$ matrix. A scalar $\lambda$ is called an \textbf{eigenvalue} of $A$ if there is a nonzero vector $\vec x$ such taht $A\vec x=\lambda\vec x$. Such a vector $\vec x$ is called an \textbf{eigenvector} of $A$ corresponding to $\lambda$.
 \end{definition}
 \begin{definition}
-    Let $A$ be an $n\times n$ matrix and let $\lambda$ be an eigenvalue of $A$. The collection of all eigenvectors corresponding to $\lambda$, together with the zero vector, is called the \B{eigenspace} of $\lambda$ and is denoted by $E_\lambda$.
+    Let $A$ be an $n\times n$ matrix and let $\lambda$ be an eigenvalue of $A$. The collection of all eigenvectors corresponding to $\lambda$, together with the zero vector, is called the \textbf{eigenspace} of $\lambda$ and is denoted by $E_\lambda$.
 \end{definition}
 \subsection{Determinants}
 \begin{definition}
@@ -594,7 +594,7 @@
         a_{21} &a_{22} &a_{23}\\ 
         a_{31} &a_{32} &a_{33}
     \end{bmatrix}$.
-    Then the \B{determinant} of $A$ is the scalar
+    Then the \textbf{determinant} of $A$ is the scalar
     \begin{align*}
         det A = |A| = a_{11}\left|\begin{array}{ccc}
             a_{22} &a_{23}\\ 
@@ -609,16 +609,16 @@
             a_{31} &a_{32}
         \end{array}\right|
     \end{align*}
-    For any matrix $A$, $A_{ij}$ is called the \B{(i,j)-minor} of $A$.
+    For any matrix $A$, $A_{ij}$ is called the \textbf{(i,j)-minor} of $A$.
 \end{definition}
 \begin{definition}
-    Let $A=[a_{ij}]$ be an $n\times n$ matrix, where $n\geq 2$. Then the \B{determinant} of $A$ is the scalar
+    Let $A=[a_{ij}]$ be an $n\times n$ matrix, where $n\geq 2$. Then the \textbf{determinant} of $A$ is the scalar
     \begin{align*}
         det A = \sum_{j=1}^n (-1)^{j+1}a_{1j}det A_{1j}
     \end{align*}
 \end{definition}
 \begin{definition}
-    The \B{(i,j)-cofactor of A} is
+    The \textbf{(i,j)-cofactor of A} is
     \begin{align*}
         C_{ij}=(-1)^{i+j}det A_{ij}
     \end{align*}
@@ -633,12 +633,12 @@
         det A &= a_{i1}C_{i1}+a_{i2}C_{i2} + \cdots + a_{in}C_{in}\\
         &= \sum_{j=1}^n a_{ij}C_{ij}
     \end{align*}
-    (the \B{cofactor expansion along the $i$th row}) and also as
+    (the \textbf{cofactor expansion along the $i$th row}) and also as
     \begin{align*}
         det A &= a_{1j}C_{1j}+a_{2j}C_{2j} + \cdots + a_{nj}C_{nj}\\
         &= \sum_{i=1}^n a_{ij}C_{ij}
     \end{align*}
-    (the \B{cofactor expansion along the $j$th column}).
+    (the \textbf{cofactor expansion along the $j$th column}).
 \end{theorem}
 \begin{theorem}
     The determinant of a triangular matrix is the product of the entries on its main diagonal.
@@ -759,7 +759,7 @@
 \end{theorem}
 \subsection{Similarity and Diagonalisation}
 \begin{definition}
-    Let $A$ and $B$ be $n\times n$ matrices. We say that $A$ \B{is similar to} $B$ if there is an invertible $n\times n$ matrix $P$ such that $P^{-1}AP=B$. If $A$ is similar to $B$ we write $A\sim B$.
+    Let $A$ and $B$ be $n\times n$ matrices. We say that $A$ \textbf{is similar to} $B$ if there is an invertible $n\times n$ matrix $P$ such that $P^{-1}AP=B$. If $A$ is similar to $B$ we write $A\sim B$.
 \end{definition}
 \begin{theorem}
     Let $A$, $B$, and $C$ be $n\times n$ matrices.
@@ -782,7 +782,7 @@
     \end{enumerate}
 \end{theorem}
 \begin{definition}
-    An $n\times n$ matrix $A$ is \B{diagonalisable} if there is a diagonal matrix $D$ such that $A$ is similar to $D$ - that is, if there is an invertible $n\times n$ matrix $P$ such that $P^{-1}AP = D$.
+    An $n\times n$ matrix $A$ is \textbf{diagonalisable} if there is a diagonal matrix $D$ such that $A$ is similar to $D$ - that is, if there is an invertible $n\times n$ matrix $P$ such that $P^{-1}AP = D$.
 \end{definition}
 \begin{theorem}
     Let $A$ be an $n\times n$ matrix. Then $A$ is diagonalisable iff $A$ has $n$ linearly independent eigenvectors.\\
@@ -798,7 +798,7 @@
     If $A$ is an $n\times n$ matrix, then the geometric multiplicity of each eigenvalue is less than or equal to its algebraic multiplicity.
 \end{theorem}
 \begin{theorem}
-    \B{The Diagonalisation Theorem}\\
+    \textbf{The Diagonalisation Theorem}\\
     Let $A$ be an $n\times n$ matrix whose distinct eigenvalues are $\lambda_1, \lambda_2, ...,\lambda_k$. The following statements are equivalent:
     \begin{enumerate}
         \item $A$ is diagonalisable.
@@ -829,7 +829,7 @@
     \end{align*}
 \end{theorem}
 \begin{definition}
-    A set of vectors in $\mathbb{R}^n$ is an \B{orthonormal set} if it is an orthogonal set of unit vectors. An \B{orthonormal basis} for a subspace $W$ of $\mathbb{R}^n$ is a basis of $W$ that is an orthonormal set. 
+    A set of vectors in $\mathbb{R}^n$ is an \textbf{orthonormal set} if it is an orthogonal set of unit vectors. An \textbf{orthonormal basis} for a subspace $W$ of $\mathbb{R}^n$ is a basis of $W$ that is an orthonormal set. 
 \end{definition}
 \begin{theorem}
     Let $\{\vec q_1, \vec q_2, ..., \vec q_k\}$ be an orthonormal basis for a subspace $W$ of $\mathbb{R}^n$ and let $\vec w\in W$. Then
@@ -843,7 +843,7 @@
 \end{theorem}
 
 \begin{definition}
-    An $n \times n$ matrix $Q$ whose columns form an orthonormal set is called an \linebreak \B{orthogonal matrix}.
+    An $n \times n$ matrix $Q$ whose columns form an orthonormal set is called an \linebreak \textbf{orthogonal matrix}.
 \end{definition}
 \begin{theorem}
     A square matrix $Q$ is orthogonal iff $Q^{-1}=Q^\intercal $.
@@ -870,7 +870,7 @@
 \end{theorem}
 \subsection{Orthogonal Complements and Orthogonal Projections}
 \begin{definition}
-    Let $W$ be a subspace of $\mathbb{R}^n$. We say that a vector $\vec v$ in $\mathbb{R}^n$ is \B{orthogonal to $W$} if $\vec v$ is orthogonal to every vector in $W$. The set of all vectors that are orthogonal to $W$ is called the \B{orthogonal complement of $W$}, denoted $W^{\perp}$. That is,
+    Let $W$ be a subspace of $\mathbb{R}^n$. We say that a vector $\vec v$ in $\mathbb{R}^n$ is \textbf{orthogonal to $W$} if $\vec v$ is orthogonal to every vector in $W$. The set of all vectors that are orthogonal to $W$ is called the \textbf{orthogonal complement of $W$}, denoted $W^{\perp}$. That is,
     \begin{align*}
         W^{\perp} = \{\vec v in \mathbb{R}^n:\vec v \cdot \vec w = 0 \text{ for all }\vec v\in W\}
     \end{align*}
@@ -893,17 +893,17 @@
 \end{theorem}
 \begin{definition}
     Let $W$ be a subspace of $\mathbb{R}^n$ and let $\{\vec u_1, ..., \vec u_k\}$ be an orthogonal basis for $W$.
-    For any vector $\vec v$ in $\mathbb{R}^n$, the \B{orthogonal projection of $\vec v$ onto $W$} is defined as
+    For any vector $\vec v$ in $\mathbb{R}^n$, the \textbf{orthogonal projection of $\vec v$ onto $W$} is defined as
     \begin{align*}
         proj_W(\vec v)=proj_{\vec u_1}(\vec v) + \cdots + proj_{\vec u_k}(\vec v).
     \end{align*}
-    The \B{component of $\vec v$ orthogonal to $W$} is the vector
+    The \textbf{component of $\vec v$ orthogonal to $W$} is the vector
     \begin{align*}
         perp_W(\vec v) = \vec v - proj_W(\vec v)
     \end{align*}
 \end{definition}
 \begin{theorem}
-    \B{The Orthogonal Decomposition Theorem}\\
+    \textbf{The Orthogonal Decomposition Theorem}\\
     Let $W$ be a subspace of $\mathbb{R}^n$ and let $\vec v$ be a vector in $\mathbb{R}^n$.
     Then there are unique vectors $\vec w$ in $W$ and $\vec w^{\perp}$ in $W^{\perp}$ such that
 \begin{align*}
@@ -920,7 +920,7 @@
 \setcounter{theorem}{14}
 \subsection{The Gram-Schmidt Process and the QR Factorisation}
 \begin{theorem}
-    \B{The Gram-Schmidt Process}\\
+    \textbf{The Gram-Schmidt Process}\\
     Let $\{\vec x_1, ..., \vec x_k\}$ be a basis for a subspace $W$ of $\mathbb{R}^n$ and define the following for all $i\in\{1,...,k\}$:
     \begin{align*}
         \vec v_i &= \vec x_i - \sum^{i-1}_{j=1} proj_{\vec v_i}(\vec x_i)\\
@@ -929,7 +929,7 @@
     Then for each $i=1, ..., k$, $\{\vec v_1, ..., \vec v_k\}$ is an orthogonal basis for $W_i$. In particular, $\{\vec v_1, ..., \vec v_k\}$ is an orthogonal basis for $W$.
 \end{theorem}
 \begin{theorem}
-    \B{The QR Factorisation}\\
+    \textbf{The QR Factorisation}\\
     Let $A$ be an $m\times n$ matrix with linearly independent columns. Then $A$ can be factored as $A=QR$, where $Q$ is an $m\times n$ matrix with orthonormal columns and $R$ is an invertible upper triangular matrix.
 \end{theorem}
 \subsection{Orthogonal Diagonalistion of Symmetric Matrices}
@@ -949,19 +949,19 @@
     \item Since $\lambda_1\not=\lambda_2$, $\vec v_1 \cdot \vec v_2=0$. $\square$
 \end{enumerate}
 \begin{theorem}
-    \B{(Finite-dimensional) Spectral theorem}\\
+    \textbf{(Finite-dimensional) Spectral theorem}\\
     Let $A$ ben an $n\times n$ real matrix. Then $A$ is symmetric iff it is orthogonally diagonalisable.
 \end{theorem}
 \subsection{Applications}
 \begin{definition}
-    A \B{quadratic form} in $n$ variables is a function $f:\mathbb{R}^n\to\mathbb{R}$ of the form
+    A \textbf{quadratic form} in $n$ variables is a function $f:\mathbb{R}^n\to\mathbb{R}$ of the form
     \begin{align*}
         f(\vec x) = \vec x^\intercal A\vec x
     \end{align*}
-    where $A$ is a symmetric $n\times n$ matrix and $\vec x$ is in $\mathbb{R}^n$. We refer to $A$ as the \B{matrix associated with $f$}.
+    where $A$ is a symmetric $n\times n$ matrix and $\vec x$ is in $\mathbb{R}^n$. We refer to $A$ as the \textbf{matrix associated with $f$}.
 \end{definition}
 \begin{theorem}
-    \B{The Principal Axes Theorem}\\
+    \textbf{The Principal Axes Theorem}\\
     Every quadratic form can be diagonalized. Specifically, if $A$ is the $n\times n$ symmetric matrix associated with the quadratic form $\vec x^\intercal A\vec x$ and if $Q$ is an orthogonal matrix such that $Q^\intercal AQ=D$ is a diagonal matrix, then the change of variable $\vec x = Q\vec y$ transforms the quadratic form $\vec x^\intercal A\vec x$ into the quadratic form $\vec y^\intercal D\vec y$, which has no cross-product terms.
     If the eigenvalues of $A$ are $\lambda_1, ...,\lambda_n$ and $y=\begin{bmatrix}
         y_1 &\cdots &y_n
@@ -973,11 +973,11 @@
 \begin{definition}
     A quadratic form $f(\vec x) = \vec x^\intercal A\vec x$ is classified as one of the following:
     \begin{enumerate}
-        \item \B{positive definite} if $f(\vec x)>0$ for all $\vec x \not= \vec 0$
-        \item \B{positive semidefinite} if $f(\vec x)\geq 0$ for all $\vec x$
-        \item \B{negative definite} if $f(\vec x)<0$ for all $\vec x \not= 0$
-        \item \B{negative semidefinite} if $f(\vec x)\leq 0$ for all $\vec x$
-        \item \B{indefinite} if $f(\vec x)$ takes on both positive and negative values
+        \item \textbf{positive definite} if $f(\vec x)>0$ for all $\vec x \not= \vec 0$
+        \item \textbf{positive semidefinite} if $f(\vec x)\geq 0$ for all $\vec x$
+        \item \textbf{negative definite} if $f(\vec x)<0$ for all $\vec x \not= 0$
+        \item \textbf{negative semidefinite} if $f(\vec x)\leq 0$ for all $\vec x$
+        \item \textbf{indefinite} if $f(\vec x)$ takes on both positive and negative values
     \end{enumerate}
     These properties can be applied to symmetric matrices $A$ associated with $f(\vec x)=\vec x^\intercal A\vec x$.
 \end{definition}
